<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clipToPadding="false"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_nuevo_usuario"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="40dp"/>

        <TextView android:text="@string/opcion_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText android:id="@+id/inputNombre"
            android:hint="@string/hint_nombre_usuario"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/opcion_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText android:id="@+id/inputApellido"
            android:hint="@string/hint_apellido_usuario"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/opcion_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText android:id="@+id/inputEmail"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/opcion_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText android:id="@+id/inputTelefono"
            android:hint="@string/hint_telefono"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/inputPassword"
            android:hint="@string/opcion_contrasena"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textoRequisitosPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/titulo_requisitos_contrasena"
            android:textColor="@color/gris_oscuro"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/passwordRulesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp">

            <TextView
                android:id="@+id/ruleLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requisito_contrasena1"
                android:textSize="15sp"
                android:textColor="@color/gris_oscuro" />

            <TextView
                android:id="@+id/ruleMayuscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requisito_contrasena2"
                android:textSize="15sp"
                android:textColor="@color/gris_oscuro" />

            <TextView
                android:id="@+id/ruleMinuscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requisito_contrasena3"
                android:textSize="15sp"
                android:textColor="@color/gris_oscuro" />

            <TextView
                android:id="@+id/ruleNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requisito_contrasena4"
                android:textSize="15sp"
                android:textColor="@color/gris_oscuro" />

            <TextView
                android:id="@+id/ruleEspecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requisito_contrasena5"
                android:textSize="15sp"
                android:textColor="@color/gris_oscuro" />
        </LinearLayout>

        <EditText android:id="@+id/inputRepetirPassword"
            android:hint="@string/opcion_repetir_contrasena"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkAprobado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_aprobado"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/textoInfoAprobado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_aprobado_texto"
            android:textSize="12sp"
            android:textColor="@color/gris_oscuro"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnResetearContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_restablecer_contrasena"
            android:backgroundTint="@color/verde_manzana"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/btnCrearUsuario"
            android:text="@string/boton_guardar"
            android:textColor="@color/blanco"
            android:backgroundTint="@color/verde_oscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <ProgressBar
            android:id="@+id/progressBarReset"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/mensajeSeguro"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:textColor="@color/negro"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
