<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clipToPadding="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_nuevo_precio"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="40dp"/>

        <TextView android:text="@string/opcion_servicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinnerServicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/opcion_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/editDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion_precios" />

        <TextView android:text="@string/opcion_tipo_unidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/editTipoUnidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tipo_unidad" />

        <TextView android:text="@string/opcion_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/editPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_precio" />

        <Button
            android:id="@+id/btnCrearPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_guardar"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>
