<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/blanco">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_nuevo_servicio"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="text"
            android:backgroundTint="@color/gris_oscuro"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/inputDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:backgroundTint="@color/gris_oscuro"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginBottom="12dp"
            android:src="@drawable/placeholder" />

        <Button
            android:id="@+id/btnSeleccionarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_seleccionar_imagen"
            android:layout_marginBottom="6dp"
            android:textColor="@color/blanco"
            android:backgroundTint="@color/verde_manzana"/>

        <Button
            android:id="@+id/btnEliminarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_eliminar_imagen"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/blanco"
            android:backgroundTint="@color/rojo_manzana"/>

        <Button
            android:id="@+id/btnGuardarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_guardar"
            android:backgroundTint="@color/verde_oscuro"
            android:textColor="@color/blanco"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
</ScrollView>
