<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_soporte"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/verde_oscuro"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_soporte"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/edtAsunto"
            android:hint="@string/soporte_form_asunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edtMensaje"
            android:hint="@string/soporte_form_mensaje"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnAdjuntarImg"
            android:text="@string/soporte_form_imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAdjunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgAdjunta"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:background="@color/gris_claro" />

                <TextView
                    android:id="@+id/textAdjunta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Imagen adjunta"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/gris_oscuro"
                    android:background="@color/gris_claro" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnEnviarSoporte"
            android:text="@string/boton_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/verde_oscuro"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>
